launchpad-buildd (136) UNRELEASED; urgency=medium

  * Use twisted.python.log.msg rather than print to write to the log file.
    Twisted 15.2's stdio wrapper tries to decode as ASCII and thus breaks on
    sbuild's UTF-8 section markers, and this seems to be the simplest way to
    fix that while preserving source compatibility with earlier versions of
    Twisted.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 04 Nov 2015 11:49:27 +0000

launchpad-buildd (135) trusty; urgency=medium

  * debian/control: Require python-debian (>= 0.1.23), needed for changes in
    launchpad-buildd 133.
  * debian/control: Drop dependency on linux32.  It's been in util-linux for
    ages, which is Essential, and utopic dropped the Provides.
  * debian/launchpad-buildd.init: Set "Should-Start: cloud-init" to ensure
    that launchpad-buildd is started after the hostname is set.
  * Simplify BuilddSlaveTestSetup slightly.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 29 Oct 2015 17:49:57 +0000

launchpad-buildd (134) trusty; urgency=medium

  * buildsnap: Drop explicit installation of sudo, now fixed in snapcraft.
  * Rewrite debian/rules in modern dh style.
  * buildsnap: Pass SNAPCRAFT_LOCAL_SOURCES=1 to snapcraft so that it uses
    the build's sources.list.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 24 Sep 2015 10:20:13 +0100

launchpad-buildd (133) trusty; urgency=medium

  * Liberalise dep-wait matching regexes slightly so that they match
    multi-line output properly, as in the case where multiple
    build-dependencies are uninstallable.
  * If there is a mix of definite and dubious dep-wait output, then analyse
    the situation rather than trusting just the definite information.
  * Handle architecture restrictions, architecture qualifications, and
    restriction formulas (build profiles) in build-dependencies.
  * Add support for building snaps (LP: #1476405).
  * slave-prep: Output current python-debian version, useful for debugging